# eliteagent

./: .gitignore  AGENTS.md  README.md  example.env  haiku.md  lion.txt  prime.js  prime.py  pyproject.toml  walrus_haiku.txt
eliteagent/: cli.py  logger.py  logger.py.backup  models.py  tools.py  ui.py
